# OmniNervous

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.local  LICENSE  LICENSING.md  README.md  RELEASE_NOTES.md  config.example.toml  design.md  docker-compose.yml
.github/workflows/: build.yml  release.yml  test.yml
Capability_test/: cloud_test_50_run_paper.md
Capability_test/50cmk/: cloud_test_20260125_043027.json  cloud_test_20260125_043249.json  cloud_test_20260125_043510.json  cloud_test_20260125_043730.json  cloud_test_20260125_043951.json  cloud_test_20260125_044213.json  cloud_test_20260125_044434.json  cloud_test_20260125_044655.json  cloud_test_20260125_044915.json  cloud_test_20260125_045136.json  cloud_test_20260125_045356.json  cloud_test_20260125_045618.json  cloud_test_20260125_045839.json  cloud_test_20260125_050100.json  cloud_test_20260125_050321.json  cloud_test_20260125_050542.json  cloud_test_20260125_050804.json  cloud_test_20260125_051026.json  cloud_test_20260125_051247.json  cloud_test_20260125_051508.json  cloud_test_20260125_051729.json  cloud_test_20260125_051950.json  cloud_test_20260125_052211.json  cloud_test_20260125_052432.json  cloud_test_20260125_052653.json  cloud_test_20260125_052915.json  cloud_test_20260125_053135.json  cloud_test_20260125_053356.json  cloud_test_20260125_053617.json  cloud_test_20260125_053837.json  cloud_test_20260125_054058.json  cloud_test_20260125_054319.json  cloud_test_20260125_054540.json  cloud_test_20260125_054801.json  cloud_test_20260125_055022.json  cloud_test_20260125_055243.json  cloud_test_20260125_055505.json  cloud_test_20260125_055725.json  cloud_test_20260125_055946.json  cloud_test_20260125_060208.json  (+10 more)
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  endpoint.rs  handler.rs  happy_eyeballs.rs  http.rs  identity.rs  ipv6_utils.rs  l2.rs  lib.rs  main.rs  metrics.rs  netcheck.rs  peers.rs  portmap.rs  relay.rs  signaling.rs  socket.rs  stun.rs  wg.rs
docs/: REVIEW_CHECKLIST.md  ROADMAP.md  WHITEPAPER.md  chatgpt_gpt5_view.md  grok_code_Fast_1_review.md  grok_code_Fast_3_review.md  omninervous-plugin-system.md
omni-common/: Cargo.toml
omni-common/src/: lib.rs
omni-daemon/: Cargo.toml
omni-daemon/ebpf/: README.md
omni-daemon/src/: af_xdp.rs  bpf_sync.rs  config.rs  crypto_util.rs  fdb.rs  http.rs  identity.rs  main.rs  metrics.rs  noise.rs  nonce.rs  p2p.rs  peers.rs  poly1305.rs  ratelimit.rs  session.rs  signaling.rs  tun.rs  wg.rs
omni-ebpf/omni-ebpf-core/: Cargo.toml
omni-ebpf/omni-ebpf-core/.cargo/: config.toml
omni-ebpf/omni-ebpf-core/src/: lib.rs  main.rs
scripts/: analyze_50cmk.py  auto_test_docker.sh  build_cross_fast.sh  build_linux_amd64.sh  build_local_docker.ps1  build_local_docker.sh  cloud_test.sh  cloud_test_0.2.3.sh  cloud_test_50_cmk.sh  cloud_test_aws.sh  deploy_nucleus.sh  deploy_to_cloud.sh  fast_deploy.sh  local_l2_l3_docker_test.sh  omni-daemon-linux-amd64  omni-daemon-macos-arm64  omninervous-linux-amd64  omninervous-linux-arm64  run_local_autotest.sh  test_l2_connectivity.sh
test_results/: cloud_test_20260114_104315.json  cloud_test_20260114_105137.json  cloud_test_20260114_110718.json  cloud_test_20260114_173819.json  cloud_test_20260119_035436.json  cloud_test_20260119_043343.json  cloud_test_20260119_044835.json  cloud_test_20260119_053312.json
