[package]
name = "omni-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable aya integration for BPF map types
aya = ["dep:aya"]

[dependencies]
# Optional aya dependency for Pod trait (userspace only)
aya = { version = "0.12", optional = true }

[target.'cfg(target_arch = "bpf")'.dependencies]
# eBPF target uses aya-bpf
