[package]
name = "omni-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable aya integration for BPF map types
aya = ["dep:aya"]

[dependencies]
bytemuck = { version = "1.12.0", features = ["derive"] }
# Optional aya dependency for Pod trait (userspace only)
aya = { version = "0.13.0", optional = true }

[target.'cfg(target_arch = "bpf")'.dependencies]
# eBPF target uses aya-ebpf
aya-ebpf = { version = "0.1.1" }
