[package]
name = "omni-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
omni-common = { path = "../omni-common" }
tokio = { version = "1", features = ["full"] }
snow = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
indexmap = "=2.2.6"
rand = "0.8"
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
