[package]
name = "omni-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
snow = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
indexmap = "=2.2.6"
rand = "0.8"
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
sha2 = "0.10"
hmac = "0.12"
poly1305 = "0.8"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tun2 = { version = "4", features = ["async"] }
libc = "0.2"

# Non-Linux: omni-common without aya
[target.'cfg(not(target_os = "linux"))'.dependencies]
omni-common = { path = "../omni-common" }

# Linux: omni-common with aya feature for Pod trait
[target.'cfg(target_os = "linux")'.dependencies]
omni-common = { path = "../omni-common", features = ["aya"] }
aya = { version = "0.12", features = ["async_tokio"] }
