[package]
name = "omni-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
snow = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
indexmap = "=2.2.6"
rand = "0.8"
dirs = "5.0"
lazy_static = "1.4"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
sha2 = "0.10"
hmac = "0.12"
poly1305 = "0.8"
core_affinity = "0.8"
xsk-rs = "0.8"
# Note: SIMD is typically enabled via target-cpu=native and backend-specific flags.
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tun2 = { version = "4", features = ["async"] }
libc = "0.2"
serde_cbor = "0.11"
hex = "0.4"

# Non-Linux: omni-common without aya
[target.'cfg(not(target_os = "linux"))'.dependencies]
omni-common = { path = "../omni-common" }

# Linux: omni-common with aya
[target.'cfg(target_os = "linux")'.dependencies]
omni-common = { path = "../omni-common", features = ["aya"] }
aya = "0.12.0"
aya-log = "0.2.0"
tokio = { version = "1", features = ["full", "parking_lot"] }
nix = { version = "0.30.1", features = ["sched"] }
num_cpus = "1.17.0"
