[package]
name = "omninervous"
version = "0.2.5"
description = "High-Performance P2P VPN for AI & Robotics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omniedgeio/OmniNervous"
homepage = "https://omniedge.io"
readme = "README.md"
keywords = ["p2p", "vpn", "mesh", "wireguard", "networking"]
categories = ["network-programming"]
edition = "2021"
resolver = "2"

[lib]
name = "omninervous"
path = "src/lib.rs"

[[bin]]
name = "omninervous"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
snow = { version = "0.9.6", default-features = false, features = ["ring-accelerated"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
dirs = "5.0"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
sha2 = "0.10"
hmac = "0.12"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
hex = "0.4"
base64 = "0.21"
serde_cbor = "0.11"
governor = "0.6"
boringtun = { git = "https://github.com/omniedgeio/boringtun", branch = "fix/legacy-deps" }
tun = { version = "0.6", features = ["async"] }
