[package]
name = "omni-ebpf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "=0.1.1"
aya-log-ebpf = "=0.1.0"
omni-common = { path = "../../omni-common" }

[[bin]]
name = "omni-ebpf"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
